rewrite most of the ugly code and improved it.